--- a/src/index.css
+++ b/src/index.css
@@ -59,9 +59,13 @@ footer a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   padding-top: 90px;
   padding-bottom: 12rem;
@@ -70,11 +74,11 @@ footer a {
 .btn {
   font-family: "Sawasdee";
   width: 160px;
-  padding-top: 2px;
-  padding-bottom: 2px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border: none;
   border-radius: 5px;
-  font-size: 24px;
+  font-size: 18px;
   outline: none;
   cursor: pointer;
 }
@@ -87,6 +91,24 @@ footer a {
   background-color: #ff6161;
   color: white;
   font-weight: bold;
+}
+
+.answers {
+  width: 250px;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: #ff6161;
+  color: white;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 22px;
+  border-radius: 5px;
+  margin-bottom: 20px;
 }
 
 .choices {
@@ -125,6 +147,7 @@ footer a {
       -ms-flex-pack: center;
           justify-content: center;
   border-radius: 5px;
+  background-color: #333;
 }
 
 .win {
@@ -133,5 +156,9 @@ footer a {
 
 .defeat {
   background-color: #df3434;
+}
+
+.tie {
+  background-color: #5d72d3;
 }
 /*# sourceMappingURL=index.css.map */
