--- a/src/index.scss
+++ b/src/index.scss
@@ -43,7 +43,8 @@ footer {
 }
 .game {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   padding-top: 90px;
   padding-bottom: 12rem;
@@ -52,11 +53,11 @@ footer {
 .btn {
   font-family: "Sawasdee";
   width: 160px;
-  padding-top: 2px;
-  padding-bottom: 2px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border: none;
   border-radius: 5px;
-  font-size: 24px;
+  font-size: 18px;
   outline: none;
   cursor: pointer;
   img {
@@ -69,7 +70,18 @@ footer {
   color: white;
   font-weight: bold;
 }
-
+.answers {
+  width: 250px;
+  height: 50px;
+  display: flex;
+  justify-content: space-around;
+  background-color: #ff6161;
+  color: white;
+  align-items: center;
+  font-size: 22px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
 .choices {
   display: flex;
   height: max-content;
@@ -92,10 +104,14 @@ footer {
   align-items: center;
   justify-content: center;
   border-radius: 5px;
+  background-color: #333;
 }
 .win {
   background-color: #4fcb63;
 }
 .defeat {
   background-color: #df3434;
+}
+.tie {
+  background-color: rgb(93, 114, 211);
 }
