--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   position: relative;
   min-height: 100vh;
   color: #333;
+  overflow: hidden;
 }
 
 .navbar {
@@ -59,6 +60,7 @@ footer a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -69,6 +71,39 @@ footer a {
   text-align: center;
   padding-top: 90px;
   padding-bottom: 12rem;
+}
+
+.statistics {
+  position: absolute;
+  width: 150px;
+  text-align: left;
+  padding: 15px 20px;
+  top: 4%;
+  right: 2%;
+  background-color: #f3f3f3;
+  border-radius: 10px;
+  color: #444;
+  outline: none;
+  border: none;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+}
+
+.statistics .stats-inner {
+  position: relative;
+}
+
+.statistics .close-statistics {
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: transparent;
+  font-size: 15px;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .btn {
@@ -160,5 +195,29 @@ footer a {
 
 .tie {
   background-color: #5d72d3;
+}
+
+.statistics-enter {
+  position: absolute;
+  -webkit-transform: translateX(110%);
+          transform: translateX(110%);
+}
+
+.statistics-enter-active {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+}
+
+.statistics-exit {
+  position: absolute;
+}
+
+.statistics-exit-active {
+  -webkit-transform: translateX(110%);
+          transform: translateX(110%);
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
 }
 /*# sourceMappingURL=index.css.map */
