--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@ body {
   position: relative;
   min-height: 100vh;
   color: #333;
+  overflow: hidden;
 }
 
 .navbar {
@@ -43,11 +44,41 @@ footer {
 }
 .game {
   display: flex;
+  position: relative;
   flex-direction: column;
   align-items: center;
   text-align: center;
   padding-top: 90px;
   padding-bottom: 12rem;
+}
+
+.statistics {
+  position: absolute;
+  width: 150px;
+  text-align: left;
+  padding: 15px 20px;
+  top: 4%;
+  right: 2%;
+  background-color: rgb(243, 243, 243);
+  border-radius: 10px;
+  color: #444;
+  outline: none;
+  border: none;
+  transition: 0.5s all;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  .stats-inner {
+    position: relative;
+  }
+  .close-statistics {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: transparent;
+    font-size: 15px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+  }
 }
 
 .btn {
@@ -114,4 +145,23 @@ footer {
 }
 .tie {
   background-color: rgb(93, 114, 211);
+}
+
+.statistics-enter {
+  position: absolute;
+  transform: translateX(110%);
+}
+
+.statistics-enter-active {
+  transform: translateX(0%);
+  transition: all 200ms ease;
+}
+
+.statistics-exit {
+  position: absolute;
+}
+
+.statistics-exit-active {
+  transform: translateX(110%);
+  transition: all 200ms;
 }
