--- a/src/index.scss
+++ b/src/index.scss
@@ -57,8 +57,8 @@ footer {
   width: 150px;
   text-align: left;
   padding: 15px 20px;
-  top: 4%;
-  right: 2%;
+  top: 2%;
+  right: 0.7%;
   background-color: rgb(243, 243, 243);
   border-radius: 10px;
   color: #444;
@@ -143,7 +143,7 @@ footer {
 .defeat {
   background-color: #df3434;
 }
-.tie {
+.draw {
   background-color: rgb(93, 114, 211);
 }
 
